pre-release commit

--- a/index.html
+++ b/index.html
@@ -17,20 +17,15 @@
 
             <h3>Sizes</h3>
 
-            <span>Extra Small (xs)</span>
-            <light-switch-field v-model="value" size="xs"></light-switch-field>
+            <light-switch-field v-model="value" size="xs" id="xs" label="Extra Small (xs)"></light-switch-field>
 
-            <span>Small (sm)</span>
-            <light-switch-field v-model="value" size="sm"></light-switch-field>
+            <light-switch-field v-model="value" size="sm" label="Small (sm)"></light-switch-field>
 
-            <span>Medium (md)</span>
-            <light-switch-field v-model="value" size="md"></light-switch-field>
+            <light-switch-field v-model="value" size="md" label="Medium (md)"></light-switch-field>
 
-            <span>Large (lg)</span>
-            <light-switch-field v-model="value" size="lg"></light-switch-field>
+            <light-switch-field v-model="value" size="lg" label="Large (lg)"></light-switch-field>
 
-            <span>Extra Large (xl)</span>
-            <light-switch-field v-model="value" size="xl"></light-switch-field>
+            <light-switch-field v-model="value" size="xl" label="Extra Large (xl)"></light-switch-field>
         </form>
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
