--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
             
             <light-switch-field
                 v-model="value"
-                :value="value"
-                :on-value="true"
-                :off-value="false"
+                :on-value="false"
+                :off-value="true"
                 :help-text="`Current Value: ${value}`">
             </light-switch-field>
 
