pre-release commit

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             
             <light-switch-field
                 v-model="value"
-                :on-value="false"
-                :off-value="true"
+                :on-value="true"
+                :off-value="false"
                 :help-text="`Current Value: ${value}`">
             </light-switch-field>
 
